# zero

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
docs/: index.md
docs/.vitepress/: config.js
docs/basics/: datatypes.md  index.md  keywords.md
docs/moons/: async.md  collections.md  env.md  fmt.md  http.md  index.md  io.md  iter.md  math.md  net.md  number.md  str.md  web.md
src/: grammar_rules.pest  lexical_analyzer.rs  lib.rs  main.rs  parser.pest  parser.rs  utils.rs
