[package]
name = "zero"
version = "0.1.0"
description= "The zero programming language"
edition = "2021"
license = "MIT"
authors = ["crr1c4<venegaschristian014@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
